Bug 255792, nsSmallVoidArray::ReplaceElementAt does not work in the same way as nsVoidArray::ReplaceElementAt, r=rjesup,sr=alecf